--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -17,7 +17,7 @@ authors:
     affiliations:
       - Department of Civil Engineering, University of Illinois, Champaign-Urbana
   - github: banyekalaok
-    name: Robert Zhang
+    name: Ruihao (Robert) Zhang
     initials: RZ
     affiliations:
       - Department of Civil Engineering, University of Illinois, Champaign-Urbana
